Fix body horizontal scroll

--- a/pages/_styles/global.scss
+++ b/pages/_styles/global.scss
@@ -30,7 +30,7 @@ a, a:visited {
 }
 
 body {
-  width: 100vw;
+  max-width: 100vw;
   font-size: calc(16px + 0.25vw);
 }
 
